# petalsonic

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  audionimbus
.claude/: settings.local.json
examples/: callback_test.rs
petalsonic/: Cargo.toml  README.md
petalsonic-core/: Cargo.toml  README.md
petalsonic-core/src/: config.rs  engine.rs  error.rs  events.rs  lib.rs  mixer.rs  playback.rs  world.rs
petalsonic-core/src/audio_data/: load_options.rs  loader.rs  mod.rs  resampler.rs  streaming_resampler.rs  symphonia_loader.rs
petalsonic-core/src/config/: mod.rs  source_config.rs  world_desc.rs
petalsonic-core/src/reference-audio/: README.md  build.rs  pal.rs  spatial_sound_manager.rs
petalsonic-core/src/reference-audio/src/: audio.rs  camera_controller.rs  main.rs
petalsonic-core/src/scene/: material.rs  ray_tracer.rs
petalsonic-core/src/spatial/: effects.rs  hrtf.rs  mod.rs  processor.rs
petalsonic-demo/: Cargo.toml
petalsonic-demo/src/: cli.rs  main.rs
petalsonic-demo/src/gui/: app.rs  mod.rs  profiling.rs
petalsonic/src/: engine.rs  error.rs  lib.rs  world.rs
petalsonic/src/audio_data/: batch_resampler.rs  default_loader.rs  load_options.rs  mod.rs
petalsonic/src/config/: world_desc.rs
petalsonic/src/reference-audio/: Cargo.toml  LICENSE-MIT
petalsonic/src/scene/: mod.rs
petalsonic/src/spatial/: effects.rs  hrtf.rs  mod.rs  processor.rs
src/: audio.rs  config.rs  engine.rs  lib.rs  math.rs  test_audio_playback.rs  world.rs
src/audio/: symphonia_loader.rs
src/audio_data/: load_options.rs  mod.rs  resampler.rs  symphonia_loader.rs
tools/: publish.sh
