[package]
name = "petalsonic-core"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = "0.5.4"
cpal = "0.15.3"
rubato = "0.14.1"
anyhow = "1.0.89"
crossbeam-channel = "0.5.13"
audionimbus = { version = "0.8.1", features = ["auto-install"] }
log = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
