[package]
name = "petalsonic"
description = "Real-time safe spatial audio library for Rust using Steam Audio for 3D spatialization"
version = "0.1.0"
edition = "2024"
authors = ["Ruitian Yang <ruitian0716@gmail.com>"]
license = "MIT"
keywords = ["audio", "spatial", "3d", "steam-audio", "game"]
categories = ["multimedia::audio", "game-development"]
repository = "https://github.com/tr-nc/petalsonic"
readme = "README.md"

[dependencies]
symphonia = "0.5.4"
cpal = "0.15.3"
rubato = "0.14.1"
anyhow = "1.0.89"
crossbeam-channel = "0.5.13"
audionimbus = { version = "0.9", features = ["auto-install"] }
ringbuf = "0.4.7"
log = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
